scss/_home.scss
.s-hero {
    width: 100%;
    height: 100vh;
    @include flex(row, center, center);
    background:
        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)),
        /* Gradiente escuro */ url("../img/37.jpg") no-repeat center center;
    background-size: cover;

    .d-flex {
        align-items: center;
    }

    .btn-primary {
        svg {
            margin-right: 8px;
            transition: transform 0.3s ease;
            background-color: $black;
            padding: 4px;
            border-radius: 50px;
        }

        &:hover {
            svg {
                transform: translateY(-2px);
            }
        }
    }

    &__text {
        margin-bottom: 3.9rem;
        width: 50%;

        .lead {
            display: inline-flex;
            align-items: center;
            color: $brand-main-light;
            font-size: 1.6rem;
            font-weight: 500;
            border-radius: 20px;
        }

        .title {
            font-size: 6.5rem;
            line-height: 120%;
            font-weight: 600;

            color: $white;
            max-width: 74rem;
            font-family: "Holtwood One SC", serif;
            font-weight: 400;
            font-style: normal;

            span {
                font-family: "Holtwood One SC", serif;
                font-weight: 400;
                font-style: normal;
            }
        }

        .description {
            max-width: 50rem;
            margin-top: 3.4rem;
            margin-bottom: 4rem;
            font-weight: 400;
            font-size: 2rem;
            line-height: 150%;
            color: $white;
        }
    }

    &__image {
        margin: 0 auto;
        width: 55%;
        position: relative;

        // .mini-churras {
        //     position: absolute;
        //     bottom: 0;
        //     left: 0;
        //     animation: subirDescer 5s ease-in-out infinite;
        //     width: 140px; /* Ajuste o tamanho conforme necessário */
        //     height: auto;
        // }

        .mini-churras-container {
            position: absolute; /* Define o container como referência para o pseudo-elemento */
            width: 140px; /* Ajuste o tamanho conforme necessário */
            height: auto;
            bottom: 0;
            animation: subirDescer 5s ease-in-out infinite;
        }

        .mini-churras-container::before {
            content: "";
            position: absolute;
            top: 0;
            left: 50%;
            transform: translateX(-50%);
            width: 100%; /* Para ampliar o efeito além da imagem */
            height: 100%;
            background: radial-gradient(circle, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 80%);
            opacity: 0.6;
            animation: smoke 4s infinite ease-in-out;
            pointer-events: none;
            filter: blur(8px);
            z-index: 10; /* Certifique-se de que o efeito fique acima da imagem */
        }

        .mini-churras {
            position: relative; /* Garante que a imagem esteja no mesmo contexto do container */
            z-index: 2; /* Mantém a imagem acima do pseudo-elemento */
            width: 100%;
            height: auto;
        }

        /* Animação de fumaça */
        @keyframes smoke {
            0% {
                transform: translate(-50%, 0) scale(1);
                opacity: 0.6;
            }
            50% {
                transform: translate(-50%, -30%) scale(1.2);
                opacity: 0.3;
            }
            100% {
                transform: translate(-50%, -60%) scale(1.5);
                opacity: 0;
            }
        }

        .selo {
            position: absolute;
            top: 25px;
            right: 8%;
            background-color: rgba(0, 0, 0, 0.55);
            border: 1px solid rgba(196, 196, 196, 0.2784313725);
            backdrop-filter: blur(4px);
            border-radius: 100%;
            width: 100px;
            height: 100px;
            animation: girar 10s linear infinite;
        }
        @keyframes girar {
            from {
                transform: rotate(0deg); /* Início da rotação */
            }
            to {
                transform: rotate(360deg); /* Completa uma rotação */
            }
        }

        img {
            border-radius: 10px;
        }
    }

    .infos {
        position: absolute;
        bottom: 0;
        width: 40%;
        left: 50%;
        transform: translateX(-50%);
        margin: 0 auto;
        backdrop-filter: blur(4px);
        background-color: rgb(222 222 222 / 5%);
        text-align: center;

        border: 1px solid #60606054;

        li {
            border-bottom: 2px solid $brand-main-light;
            padding: 9px;
            width: 30%;
        }

        &__title {
            color: $brand-main-light;
            font-size: 3.5rem;
        }

        &__description {
            font-size: 1.8rem;
            color: $white;
        }
    }

    @include responsive($laptop) {
        &__text {
            .title {
                font-size: 3rem;
                line-height: 110%;
            }
        }

        .infos {
            width: 100%;
            bottom: 0;
        }
    }

    @include responsive($tablet) {
        padding-top: 8rem;

        .d-flex {
            flex-direction: column;
        }

        &__text {
            text-align: center;
            width: 100%;

            .btn-primary {
                margin: 0 auto;
                display: flex;
                justify-content: center;
                flex-direction: row;
                width: 80%;
            }

            .title {
                font-size: 4.5rem;
            }

            .description {
                max-width: 100%;
                margin: 3rem auto;
                font-size: 1.6rem;
            }
            .lead {
                align-items: center;
                justify-content: center;
                span {
                    display: none;
                }
            }
        }

        &__image {
            width: 100%;
        }

        .infos {
            width: 100%;
            margin-left: 0;
            flex-direction: row;

            &__description {
                font-size: 1.4rem;
            }
            svg {
                width: 24px;
            }
        }
    }

    @include responsive($mobile) {
        height: auto;
        .infos {
            position: relative;

            li {
                padding: 0;
            }
        }
        &__image {
            .selo {
                top: 0;
                right: 8%;
            }
        }
    }
}

